typeway/tests/compile_fail/parametric_effect_wrong_param.stderr
warning: unused import: `typeway_core::effects::*`
 --> tests/compile_fail/parametric_effect_wrong_param.rs:4:5
  |
4 | use typeway_core::effects::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: effect `CacheRequired<ItemCache>` has not been provided
  --> tests/compile_fail/parametric_effect_wrong_param.rs:26:10
   |
26 |         .ready();
   |          ^^^^^ this effect list does not contain `CacheRequired<ItemCache>`
   |
   = help: the trait `HasEffect<CacheRequired<ItemCache>, _>` is not implemented for `ENil`
   = note: call `.provide::<CacheRequired<ItemCache>>()` on the EffectfulServer to discharge this requirement
help: the following other types implement trait `HasEffect<E, Idx>`
  --> $WORKSPACE/typeway-core/src/effects.rs
   |
   |   impl<E: Effect, Tail> HasEffect<E, EHere> for ECons<E, Tail> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ECons<E, Tail>` implements `HasEffect<E, EHere>`
...
   | / impl<E: Effect, Head: Effect, Tail, Idx> HasEffect<E, EThere<Idx>> for ECons<Head, Tail> where
   | |     Tail: HasEffect<E, Idx>
   | |___________________________^ `ECons<Head, Tail>` implements `HasEffect<E, EThere<Idx>>`
   = note: required for `ECons<CacheRequired<UserCache>, ENil>` to implement `HasEffect<CacheRequired<ItemCache>, EThere<_>>`
   = note: required for `typeway::Requires<CacheRequired<ItemCache>, Endpoint<Get, HCons<Lit<__lit_items>, HNil>, NoBody, std::string::String>>` to implement `AllProvided<ECons<CacheRequired<UserCache>, ENil>, (EThere<_>, ())>`
   = note: 1 redundant requirement hidden
   = note: required for `(typeway::Requires<CacheRequired<ItemCache>, Endpoint<Get, HCons<Lit<__lit_items>, HNil>, NoBody, std::string::String>>,)` to implement `AllProvided<ECons<CacheRequired<UserCache>, ENil>, ((EThere<_>, ()),)>`
note: required by a bound in `EffectfulServer::<A, P>::ready`
  --> $WORKSPACE/typeway-server/src/effects.rs
   |
   |     pub fn ready<Idx>(self) -> crate::server::Server<A>
   |            ----- required by a bound in this associated function
   |     where
   |         A: AllProvided<P, Idx>,
   |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `EffectfulServer::<A, P>::ready`
